@@ -1,42 +1,43 @@
 package com.raditha.dedup.clustering;
 
+import com.github.javaparser.StaticJavaParser;
 import com.github.javaparser.ast.CompilationUnit;
-import com.github.javaparser.ast.expr.MethodCallExpr;
-import com.github.javaparser.ast.expr.FieldAccessExpr;
 import com.github.javaparser.ast.expr.Expression;
-import com.github.javaparser.ast.expr.NameExpr;
+import com.github.javaparser.ast.expr.MethodCallExpr;
 import com.github.javaparser.ast.expr.VariableDeclarationExpr;
 import com.github.javaparser.ast.stmt.Statement;
-import com.github.javaparser.ast.stmt.ReturnStmt;
-import com.github.javaparser.resolution.types.ResolvedType;
-import com.raditha.dedup.analysis.*;
-import com.raditha.dedup.model.*;
+import com.raditha.dedup.analysis.DataFlowAnalyzer;
+import com.raditha.dedup.analysis.ParameterExtractor;
+import com.raditha.dedup.analysis.TypeAnalyzer;
+import com.raditha.dedup.model.DuplicateCluster;
+import com.raditha.dedup.model.ParameterSpec;
+import com.raditha.dedup.model.RefactoringRecommendation;
+import com.raditha.dedup.model.RefactoringStrategy;
+import com.raditha.dedup.model.SimilarityResult;
+import com.raditha.dedup.model.StatementSequence;
+import com.raditha.dedup.model.TypeCompatibility;
 import com.raditha.dedup.refactoring.MethodNameGenerator;
 import sa.com.cloudsolutions.antikythera.parser.AbstractCompiler;
 
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.HashMap;
-import java.util.Set;
 import java.util.Optional;
+import java.util.Set;
 
 /**
  * Generates refactoring recommendations for duplicate clusters.
  */
 public class RefactoringRecommendationGenerator {
 
+    public static final String STRING = "String";
+    public static final String DOUBLE = "double";
+    public static final String BOOLEAN = "boolean";
     private final TypeAnalyzer typeAnalyzer;
     private final ParameterExtractor parameterExtractor;
     private final MethodNameGenerator nameGenerator;
     private final DataFlowAnalyzer dataFlowAnalyzer;
     private final Map<String, CompilationUnit> allCUs;
-
-    public static class TypeInferenceException extends RuntimeException {
-        public TypeInferenceException(String message) {
-            super(message);
-        }
-    }
 
     public RefactoringRecommendationGenerator() {
         this(java.util.Collections.emptyMap());
@@ -75,7 +76,38 @@ public class RefactoringRecommendationGenerator {
         parameters = filterInternalParameters(parameters, cluster.primary());
 
         // Determine strategy
-        RefactoringStrategy strategy = determineStrategy(cluster, typeCompat);
+        RefactoringStrategy strategy = determineStrategy(cluster);
+
+        // Refine parameter types
+        // If ParameterExtractor defaulted to "Object", try to infer type from example
+        // values
+        List<ParameterSpec> refinedParameters = new java.util.ArrayList<>();
+        for (ParameterSpec p : parameters) {
+            if ("Object".equals(p.type()) && !p.exampleValues().isEmpty()) {
+                String val = p.exampleValues().get(0);
+                String inferred = null;
+                try {
+                    inferred = findTypeInContext(cluster.primary(), val);
+                } catch (Exception e) {
+                    // ignore
+                }
+
+                if (inferred != null && !inferred.equals("Object")) {
+                    refinedParameters.add(new ParameterSpec(
+                            p.name(),
+                            inferred,
+                            p.exampleValues(),
+                            p.variationIndex(),
+                            p.startLine(),
+                            p.startColumn()));
+                } else {
+                    refinedParameters.add(p);
+                }
+            } else {
+                refinedParameters.add(p);
+            }
+        }
+        parameters = refinedParameters;
 
         // Generate method name
         String methodName = suggestMethodName(cluster, strategy);
@@ -112,12 +144,8 @@ public class RefactoringRecommendationGenerator {
      */
     private String determineReturnType(DuplicateCluster cluster) {
         Set<String> returnTypes = new HashSet<>();
-
-        // Check primary
-        System.out.println("DEBUG determineReturnType: Analyzing PRIMARY sequence with "
-                + cluster.primary().statements().size() + " statements");
         String primaryType = analyzeReturnTypeForSequence(cluster.primary());
-        System.out.println("DEBUG determineReturnType: primary returned type = " + primaryType);
+
         if (primaryType != null) {
             returnTypes.add(primaryType);
         }
@@ -128,8 +156,6 @@ public class RefactoringRecommendationGenerator {
             // relative to primary
             // We want the duplicate sequence (seq2)
             StatementSequence duplicate = pair.seq2();
-            System.out.println("DEBUG determineReturnType: Analyzing DUPLICATE sequence with "
-                    + duplicate.statements().size() + " statements");
             String type = analyzeReturnTypeForSequence(duplicate);
             if (type != null) {
                 returnTypes.add(type);
@@ -140,30 +166,31 @@ public class RefactoringRecommendationGenerator {
             return "void";
         }
 
-        // PRIORITY: Check for domain objects FIRST (User, Customer, etc.)
-        // Domain objects take precedence over String!
+        // PRIORITY: Check for String explicitly
+        // If we have an explicit String return (e.g. getName()), we want String, not
+        // the object (User)
+        if (returnTypes.contains(STRING))
+            return STRING;
+
+        // PRIORITY: Check for domain objects (User, Customer, etc.)
         Optional<String> domainType = returnTypes.stream()
-                .filter(t -> !t.equals("int") && !t.equals("long") && !t.equals("double") &&
-                        !t.equals("boolean") && !t.equals("void") && !t.equals("String"))
+                .filter(t -> !t.equals("int") && !t.equals("long") && !t.equals(DOUBLE) &&
+                        !t.equals(BOOLEAN) && !t.equals("void") && !t.equals(STRING))
                 .findFirst();
 
         if (domainType.isPresent()) {
             return domainType.get(); // Return User, Customer, Order, etc.
         }
 
-        // Only return String if no domain objects found
-        if (returnTypes.contains("String"))
-            return "String";
-
         // Primitive unification
         boolean hasInt = returnTypes.contains("int");
         boolean hasLong = returnTypes.contains("long");
-        boolean hasDouble = returnTypes.contains("double");
+        boolean hasDouble = returnTypes.contains(DOUBLE);
 
         // Heuristic: Check for time-related variables in duplicates if inference failed
         boolean hasObject = returnTypes.stream()
-                .anyMatch(t -> !t.equals("int") && !t.equals("long") && !t.equals("double") &&
-                        !t.equals("boolean") && !t.equals("void") && !t.equals("String"));
+                .anyMatch(t -> !t.equals("int") && !t.equals("long") && !t.equals(DOUBLE) &&
+                        !t.equals(BOOLEAN) && !t.equals("void") && !t.equals(STRING));
 
         if (!hasObject && !hasLong && !hasDouble) {
             boolean hasTimeVar = cluster.duplicates().stream()
@@ -171,12 +198,11 @@ public class RefactoringRecommendationGenerator {
                     .anyMatch(s -> s.contains("timeout") || s.contains("elapsed") || s.contains("Time"));
             if (hasTimeVar) {
                 hasLong = true;
-                hasLong = true;
             }
         }
 
         if (hasDouble)
-            return "double";
+            return DOUBLE;
         if (hasLong)
             return "long";
         if (hasInt)
@@ -187,42 +213,40 @@ public class RefactoringRecommendationGenerator {
     }
 
     private String analyzeReturnTypeForSequence(StatementSequence sequence) {
-        // CRITICAL FIX: Use findReturnVariable to find the variable, then get its type
-        // Don't try to determine type first (circular dependency!)
+        // PRIORITY 1: Check for logical return statements
+        // If the block explicitly returns a value, that is the return type.
+        String explicitType = analyzeReturnStatementType(sequence);
+        System.out.println("DEBUG analyzeReturnTypeForSequence [" +
+                (sequence.range().toString()) + "]: explicitType=" + explicitType);
 
-        // Find variable that should be returned (live-out or used in return statements)
+        if (explicitType != null) {
+            return explicitType;
+        }
+
+        // PRIORITY 2: Check for live-out variables
+        // If a variable is used AFTER this sequence, it MUST be returned.
         String returnVarName = dataFlowAnalyzer.findReturnVariable(sequence, "void"); // Pass "void" to bypass type
                                                                                       // filtering
-        System.out.println("DEBUG analyzeReturnTypeForSequence: findReturnVariable returned: " + returnVarName);
+
+        System.out.println("DEBUG analyzeReturnTypeForSequence var=" + returnVarName);
 
         if (returnVarName != null) {
             // Get the actual type of that variable
             String varType = getVariableType(sequence, returnVarName);
-            System.out.println("DEBUG analyzeReturnTypeForSequence: Found return var '" + returnVarName
-                    + "' with type: " + varType);
+            System.out.println("DEBUG analyzeReturnTypeForSequence varType=" + varType);
             // Return the variable's type, NOT the return statement's expression type
             if (varType != null && !"void".equals(varType)) {
                 return varType;
             }
         }
 
-        // Fallback: Check for explicit return statements IN the duplicate sequence
-        // But DO NOT use this if we found a return variable - that would give us the
-        // wrong type
-        String explicitType = analyzeReturnStatementType(sequence);
-        System.out.println("DEBUG analyzeReturnTypeForSequence: Fallback to explicit type: " + explicitType);
-        return explicitType;
+        return null;
     }
-
-    /**
-     * Determine what type the extracted method should return.
-     * Uses data flow analysis to check if any variables are live-out OR returned.
-     */
 
     /**
      * Analyze return statement within the sequence to determine actual return type.
      * Handles cases where return statement is part of the duplicate.
-     * 
+     * <p>
      * Returns null if no return statement found or type cannot be determined.
      */
     private String analyzeReturnStatementType(StatementSequence sequence) {
@@ -238,11 +262,6 @@ public class RefactoringRecommendationGenerator {
                     // If it's a method call, try to infer type from method name
                     if (returnExpr.isMethodCallExpr()) {
                         return inferTypeFromMethodCall(returnExpr.asMethodCallExpr(), sequence);
-                    }
-
-                    // If it's a field access (user.field), infer from field name
-                    if (returnExpr.isFieldAccessExpr()) {
-                        return inferTypeFromFieldAccess(returnExpr.asFieldAccessExpr());
                     }
 
                     // If it's a simple variable name, get its type
@@ -261,16 +280,9 @@ public class RefactoringRecommendationGenerator {
 
     /**
      * Infer return type from method call expression.
-     * Uses common method naming conventions.
-     */
-    /**
-     * Infer return type from method call expression.
      * Uses resolution, manual lookup, and method naming conventions.
      */
     private String inferTypeFromMethodCall(MethodCallExpr methodCall, StatementSequence sequence) {
-        // DEBUG LOGGING
-        System.out.println("DEBUG: Inferring for " + methodCall);
-
         // Try resolution first
         String resolvedType = null;
         try {
@@ -346,7 +358,7 @@ public class RefactoringRecommendationGenerator {
             // Ignore errors during manual lookup
         }
 
-        return inferTypeFromMethodCallHeuristic(methodCall);
+        return null;
     }
 
     /**
@@ -355,24 +367,23 @@ public class RefactoringRecommendationGenerator {
      * "User"
      */
     private String extractGenericTypeFromScope(StatementSequence sequence, String scopeName) {
-        try {
-            if (sequence.containingMethod() != null) {
-                var classDecl = sequence.containingMethod()
-                        .findAncestor(com.github.javaparser.ast.body.ClassOrInterfaceDeclaration.class);
-                if (classDecl.isPresent()) {
-                    // Find field declaration for the scope
-                    for (var field : classDecl.get().getFields()) {
-                        for (var v : field.getVariables()) {
-                            if (v.getNameAsString().equals(scopeName)) {
-                                // Check if field type has generic type arguments
-                                if (field.getElementType().isClassOrInterfaceType()) {
-                                    var classType = field.getElementType().asClassOrInterfaceType();
-                                    if (classType.getTypeArguments().isPresent()) {
-                                        var typeArgs = classType.getTypeArguments().get();
-                                        if (!typeArgs.isEmpty()) {
-                                            // Return first type argument (e.g., User from Repository<User>)
-                                            return typeArgs.get(0).asString();
-                                        }
+
+        if (sequence.containingMethod() != null) {
+            var classDecl = sequence.containingMethod()
+                    .findAncestor(com.github.javaparser.ast.body.ClassOrInterfaceDeclaration.class);
+            if (classDecl.isPresent()) {
+                // Find field declaration for the scope
+                for (var field : classDecl.get().getFields()) {
+                    for (var v : field.getVariables()) {
+                        if (v.getNameAsString().equals(scopeName)) {
+                            // Check if field type has generic type arguments
+                            if (field.getElementType().isClassOrInterfaceType()) {
+                                var classType = field.getElementType().asClassOrInterfaceType();
+                                if (classType.getTypeArguments().isPresent()) {
+                                    var typeArgs = classType.getTypeArguments().get();
+                                    if (!typeArgs.isEmpty()) {
+                                        // Return first type argument (e.g., User from Repository<User>)
+                                        return typeArgs.get(0).asString();
                                     }
                                 }
                             }
@@ -380,70 +391,9 @@ public class RefactoringRecommendationGenerator {
                     }
                 }
             }
-        } catch (Exception e) {
-            // Ignore
         }
+
         return null;
-    }
-
-    private String inferTypeFromMethodCallHeuristic(MethodCallExpr methodCall) {
-        String methodName = methodCall.getNameAsString();
-
-        // Common getter patterns
-        if (methodName.startsWith("get")) {
-            if (methodName.equals("getName") || methodName.equals("getEmail") ||
-                    methodName.equals("getRole") || methodName.equals("getMessage")) {
-                return "String";
-            }
-            if (methodName.equals("getId") || methodName.equals("getAge") ||
-                    methodName.equals("getCount") || methodName.equals("getSize")) {
-                return "int";
-            }
-            if (methodName.equals("isActive") || methodName.equals("isValid") ||
-                    methodName.equals("hasPermission")) {
-                return "boolean";
-            }
-        }
-
-        // is* methods typically return boolean
-        if (methodName.startsWith("is") || methodName.startsWith("has")) {
-            return "boolean";
-        }
-
-        // toString, format, etc.
-        if (methodName.equals("toString") || methodName.equals("format")) {
-            return "String";
-        }
-
-        // size, length, count methods
-        if (methodName.equals("size") || methodName.equals("length") ||
-                methodName.equals("count")) {
-            return "int";
-        }
-
-        throw new TypeInferenceException("Unable to infer return type for method call: " + methodCall);
-    }
-
-    /**
-     * Infer type from field access (user.field).
-     */
-    private String inferTypeFromFieldAccess(FieldAccessExpr fieldAccess) {
-        String fieldName = fieldAccess.getNameAsString();
-
-        // Common field naming patterns
-        if (fieldName.equals("name") || fieldName.equals("email") ||
-                fieldName.equals("role") || fieldName.equals("message")) {
-            return "String";
-        }
-        if (fieldName.equals("id") || fieldName.equals("age") ||
-                fieldName.equals("count")) {
-            return "int";
-        }
-        if (fieldName.equals("active") || fieldName.equals("valid")) {
-            return "boolean";
-        }
-
-        throw new TypeInferenceException("Unable to infer type for field access: " + fieldAccess);
     }
 
     /**
@@ -452,7 +402,7 @@ public class RefactoringRecommendationGenerator {
     private String inferTypeFromExpression(Expression expr) {
         // String literals
         if (expr.isStringLiteralExpr()) {
-            return "String";
+            return STRING;
         }
 
         // Integer literals
@@ -462,7 +412,7 @@ public class RefactoringRecommendationGenerator {
 
         // Boolean literals
         if (expr.isBooleanLiteralExpr()) {
-            return "boolean";
+            return BOOLEAN;
         }
 
         // Object creation
@@ -472,31 +422,10 @@ public class RefactoringRecommendationGenerator {
 
         // Binary expressions (concatenation)
         if (expr.isBinaryExpr()) {
-            return "String";
+            return STRING;
         }
 
         throw new TypeInferenceException("Unable to infer type for expression: " + expr);
-    }
-
-    /**
-     * Find variables used in return statements within the sequence.
-     * This handles cases where the return statement is part of the duplicate.
-     */
-    private Set<String> findVariablesInReturnStatements(StatementSequence sequence) {
-        Set<String> returned = new HashSet<>();
-
-        for (Statement stmt : sequence.statements()) {
-            if (stmt.isReturnStmt()) {
-                var returnStmt = stmt.asReturnStmt();
-                if (returnStmt.getExpression().isPresent()) {
-                    // Find all variable references in the return expression
-                    returnStmt.getExpression().get().findAll(NameExpr.class)
-                            .forEach(nameExpr -> returned.add(nameExpr.getNameAsString()));
-                }
-            }
-        }
-
-        return returned;
     }
 
     /**
@@ -529,36 +458,34 @@ public class RefactoringRecommendationGenerator {
         List<ParameterSpec> capturedParams = new java.util.ArrayList<>();
 
         // Find CU for type checks
-        CompilationUnit cu = null;
-        if (!sequence.statements().isEmpty()) {
-            cu = sequence.statements().get(0).findCompilationUnit().orElse(null);
-        }
+        CompilationUnit cu = sequence.statements().getFirst().findCompilationUnit().orElse(null);
 
         // AST: collect fields from the containing class
         boolean containingMethodIsStatic = false;
         java.util.Map<String, FieldInfo> classFields = new java.util.HashMap<>();
-        try {
-            var methodOpt = sequence.containingMethod();
-            if (methodOpt != null) {
-                containingMethodIsStatic = methodOpt.isStatic();
-                var classDeclOpt = methodOpt.findAncestor(com.github.javaparser.ast.body.ClassOrInterfaceDeclaration.class);
-                if (classDeclOpt.isPresent()) {
-                    var classDecl = classDeclOpt.get();
-                    classDecl.getFields().forEach(fd -> {
-                        boolean isStatic = fd.getModifiers().stream().anyMatch(m -> m.getKeyword() == com.github.javaparser.ast.Modifier.Keyword.STATIC);
-                        fd.getVariables().forEach(v -> {
-                            classFields.put(v.getNameAsString(), new FieldInfo(v.getType().asString(), isStatic));
-                        });
-                    });
-                }
-            }
-        } catch (Exception ignore) {}
+
+        var methodOpt = sequence.containingMethod();
+        if (methodOpt != null) {
+            containingMethodIsStatic = methodOpt.isStatic();
+            var classDecl = methodOpt.findAncestor(com.github.javaparser.ast.body.ClassOrInterfaceDeclaration.class)
+                    .orElseThrow();
+
+            classDecl.getFields().forEach(fd -> {
+                boolean isStatic = fd.getModifiers().stream()
+                        .anyMatch(m -> m.getKeyword() == com.github.javaparser.ast.Modifier.Keyword.STATIC);
+                fd.getVariables().forEach(
+                        v -> classFields.put(v.getNameAsString(), new FieldInfo(v.getType().asString(), isStatic)));
+            });
+        }
 
         for (String varName : capturedVars) {
             // Skip pseudo-variables and duplicates
-            if (varName == null || varName.isEmpty()) continue;
-            if (varName.equals("this") || varName.equals("super")) continue;
-            if (existingParamNames.contains(varName)) continue;
+            if (varName == null || varName.isEmpty())
+                continue;
+            if (varName.equals("this") || varName.equals("super"))
+                continue;
+            if (existingParamNames.contains(varName))
+                continue;
 
             // Heuristic: Skip names that look like type/class names (e.g., System)
             if (Character.isUpperCase(varName.charAt(0))) {
@@ -570,11 +497,9 @@ public class RefactoringRecommendationGenerator {
             }
             // If the name resolves to a type in context, skip (likely static access)
             if (cu != null) {
-                try {
-                    if (AbstractCompiler.findType(cu, varName) != null) {
-                        continue;
-                    }
-                } catch (Exception ignore) {}
+                if (AbstractCompiler.findType(cu, varName) != null) {
+                    continue;
+                }
             }
 
             // NEW: Field-aware captured parameter handling
@@ -582,23 +507,17 @@ public class RefactoringRecommendationGenerator {
             if (fi != null) {
                 // If it is a class field, decide based on helper accessibility
                 // Helper mirrors containing method staticness
-                // - If containing method is non-static → helper non-static → instance fields are accessible → SKIP param
+                // - If containing method is non-static → helper non-static → instance fields
+                // are accessible → SKIP param
                 // - If containing method is static:
-                //     • static field → accessible → SKIP param
-                //     • non-static field → NOT accessible → KEEP as parameter with field type
-                if (!containingMethodIsStatic) {
-                    // accessible instance field
-                    continue; // skip adding as parameter
-                } else {
-                    if (fi.isStatic) {
-                        continue; // static field accessible from static helper
-                    } else {
-                        // non-static field needed for static helper; will pass as parameter
-                        String type = fi.type != null ? fi.type : "Object";
-                        capturedParams.add(new ParameterSpec(varName, type, List.of(varName), null, null, null));
-                        continue;
-                    }
+                // • static field → accessible → SKIP param
+                // • non-static field → NOT accessible → KEEP as parameter with field type
+                if (!containingMethodIsStatic && fi.isStatic) {
+                    // non-static field needed for static helper; will pass as parameter
+                    String type = fi.type != null ? fi.type : "Object";
+                    capturedParams.add(new ParameterSpec(varName, type, List.of(varName), null, null, null));
                 }
+                continue; // skip adding as parameter
             }
 
             // Determine type of true captured variable (non-field or unresolved field)
@@ -607,193 +526,168 @@ public class RefactoringRecommendationGenerator {
                 continue;
             }
 
-            capturedParams.add(new ParameterSpec(varName, type != null ? type : "Object", List.of(varName), null, null, null));
+            capturedParams.add(
+                    new ParameterSpec(varName, type != null ? type : "Object", List.of(varName), null, null, null));
         }
 
         return capturedParams;
     }
 
-    // Lightweight holder for field metadata
-    private static final class FieldInfo {
-        final String type;
-        final boolean isStatic;
-        FieldInfo(String type, boolean isStatic) {
-            this.type = type;
-            this.isStatic = isStatic;
-        }
-    }
-
     private String findTypeInContext(StatementSequence sequence, String varName) {
-        try {
-            // 1. Scan statements for any expression referring to this variable
-            for (Statement stmt : sequence.statements()) {
-                // Check variable declarations directly
-                for (VariableDeclarationExpr vde : stmt.findAll(VariableDeclarationExpr.class)) {
-                    for (var v : vde.getVariables()) {
-                        if (v.getNameAsString().equals(varName)) {
-                            // Use solver if possible, or fallback to AST type
-                            // Use solver if possible, or fallback to AST type
-                            String resolved = null;
-                            try {
-                                resolved = v.resolve().getType().describe();
-                            } catch (Exception e) {
-                            }
-
-                            if (resolved != null && !resolved.equals("java.lang.Object")
-                                    && !resolved.equals("Object")) {
-                                return resolved;
-                            }
-
-                            // Fallback to AST type if resolution failed or is generic Object
-                            String astType = v.getType().asString();
-                            if (!astType.equals("var")) {
-                                return astType;
-                            }
-
-                            // If var, and resolved is Object, try to infer from initializer
-                            if (v.getInitializer().isPresent()) {
-                                Expression init = v.getInitializer().get();
-                                if (init.isMethodCallExpr()) {
-                                    return inferTypeFromMethodCall(init.asMethodCallExpr(), sequence);
-                                }
-                                return inferTypeFromExpression(init);
-                            }
-
-                            return resolved != null ? resolved : "Object";
-
-                        }
-                    }
-                }
-
-                for (NameExpr nameExpr : stmt.findAll(NameExpr.class)) {
-                    if (nameExpr.getNameAsString().equals(varName)) {
-                        try {
-                            String resolved = nameExpr.calculateResolvedType().describe();
-                            if (resolved != null && !resolved.equals("java.lang.Object")
-                                    && !resolved.equals("Object")) {
-                                return resolved;
-                            }
-                        } catch (Exception e) {
-                            // Continue...
-                        }
+        // 1. Scan statements for any variable declaration matching this name
+        for (Statement stmt : sequence.statements()) {
+            for (VariableDeclarationExpr vde : stmt.findAll(VariableDeclarationExpr.class)) {
+                for (var v : vde.getVariables()) {
+                    if (v.getNameAsString().equals(varName)) {
+                        return resolveType(v.getType(), v, sequence);
                     }
                 }
             }
 
-            // Check field declarations in the containing class
-            if (sequence.containingMethod() != null) {
-                var classDecl = sequence.containingMethod()
-                        .findAncestor(com.github.javaparser.ast.body.ClassOrInterfaceDeclaration.class);
-                if (classDecl.isPresent()) {
-                    for (var field : classDecl.get().getFields()) {
-                        for (var v : field.getVariables()) {
-                            if (v.getNameAsString().equals(varName)) {
-                                // Use asString() to preserve generic type parameters (e.g., Repository<User>)
-                                return field.getElementType().asString();
-                            }
-                        }
-                    }
-                }
-            }
-
-            // 2. Fallback: Scanner check (if solver failed on all usages, or no usages
-            // found in block)
-            // This handles cases where variable is defined OUTSIDE the block.
-            // We can't easily resolve outside without a reference node.
-
-            // If we have a reference to the method, we can scan parameters
-            if (sequence.containingMethod() != null) {
-                for (var param : sequence.containingMethod().getParameters()) {
+            // Check Lambda parameters
+            for (com.github.javaparser.ast.expr.LambdaExpr lambda : stmt
+                    .findAll(com.github.javaparser.ast.expr.LambdaExpr.class)) {
+                for (com.github.javaparser.ast.body.Parameter param : lambda.getParameters()) {
                     if (param.getNameAsString().equals(varName)) {
-                        try {
-                            return param.resolve().getType().describe();
-                        } catch (Exception e) {
-                            return param.getType().asString();
+                        if (!param.getType().isUnknownType() && !param.getType().isVarType()) {
+                            String resolved = resolveType(param.getType(), lambda, sequence);
+                            if (resolved != null)
+                                return resolved;
                         }
+                        return "Object";
                     }
                 }
             }
+        }
 
-            // 3. Fallback: Scan method body for variables declared outside the block
-            if (sequence.containingMethod() != null && sequence.containingMethod().getBody().isPresent()) {
-                for (VariableDeclarationExpr vde : sequence.containingMethod().getBody().get()
-                        .findAll(VariableDeclarationExpr.class)) {
-                    for (var v : vde.getVariables()) {
+        // 2. Check field declarations in the containing class
+        if (sequence.containingMethod() != null) {
+            var classDecl = sequence.containingMethod()
+                    .findAncestor(com.github.javaparser.ast.body.ClassOrInterfaceDeclaration.class);
+            if (classDecl.isPresent()) {
+                for (var field : classDecl.get().getFields()) {
+                    for (var v : field.getVariables()) {
                         if (v.getNameAsString().equals(varName)) {
-                            // Use solver if possible
-                            try {
-                                String resolved = v.resolve().getType().describe();
-                                if (resolved != null && !resolved.equals("java.lang.Object")
-                                        && !resolved.equals("Object")) {
-                                    return resolved;
-                                }
-                            } catch (Exception e) {
-                            }
-
-                            // Fallback to AST type
-                            return v.getType().asString();
+                            return resolveType(field.getElementType(), field, sequence);
                         }
                     }
                 }
             }
-
-        } catch (Exception e) {
-            // Ignore
         }
 
-        // 4. Special handling for well-known Java classes and common patterns
-        // This handles cases where variables reference built-in classes or follow
-        // common naming conventions
-
-        // Built-in Java classes (static references that don't need declaration)
-        if ("System".equals(varName)) {
-            return "java.lang.System";
-        }
-        if ("Math".equals(varName)) {
-            return "java.lang.Math";
-        }
-        if ("String".equals(varName)) {
-            return "java.lang.String";
+        // 3. Check parameters of the containing method
+        if (sequence.containingMethod() != null) {
+            for (var param : sequence.containingMethod().getParameters()) {
+                if (param.getNameAsString().equals(varName)) {
+                    return resolveType(param.getType(), param, sequence);
+                }
+            }
         }
 
-        // Common naming patterns - infer type from variable name
-        // This is lenient but better than failing fast on test data
-        if (varName.toLowerCase().contains("logger")) {
-            return "Logger"; // Common logger pattern
+        // 4. Fallback: Scan method body for variables declared outside the block
+        if (sequence.containingMethod() != null && sequence.containingMethod().getBody().isPresent()) {
+            for (VariableDeclarationExpr vde : sequence.containingMethod().getBody().get()
+                    .findAll(VariableDeclarationExpr.class)) {
+                for (var v : vde.getVariables()) {
+                    if (v.getNameAsString().equals(varName)) {
+                        return resolveType(v.getType(), v, sequence);
+                    }
+                }
+            }
         }
-        if (varName.toLowerCase().contains("repository") || varName.toLowerCase().contains("repo")) {
-            return "Repository"; // Common repository pattern
-        }
-        if (varName.toLowerCase().contains("service")) {
-            return "Service";
-        }
-        if (varName.toLowerCase().contains("data")) {
-            return "Object"; // Generic data object
-        }
-        // Common domain objects
-        if (varName.toLowerCase().contains("order")) {
-            return "Order";
-        }
-        if (varName.toLowerCase().contains("customer")) {
-            return "Customer";
-        }
-        if (varName.toLowerCase().contains("product")) {
-            return "Product";
-        }
-        if (varName.toLowerCase().contains("account")) {
-            return "Account";
-        }
-        if (varName.toLowerCase().contains("user")) {
-            return "User";
+
+        // 5. Fallback: Check if it's an expression (e.g. method call)
+        if (varName.contains("(") || varName.contains(".")) {
+            try {
+                com.github.javaparser.ast.expr.Expression expr = com.github.javaparser.StaticJavaParser
+                        .parseExpression(varName);
+                if (expr.isMethodCallExpr()) {
+                    var call = expr.asMethodCallExpr();
+                    if (call.getScope().isPresent()) {
+                        String scopeName = call.getScope().get().toString();
+                        String scopeType = findTypeInContext(sequence, scopeName);
+
+                        // Find CU for this type
+                        CompilationUnit typeCU = allCUs.get(scopeType);
+                        if (typeCU == null) {
+                            // Try simple name matching
+                            for (var entry : allCUs.entrySet()) {
+                                if (entry.getKey().endsWith("." + scopeType) || entry.getKey().equals(scopeType)) {
+                                    typeCU = entry.getValue();
+                                    break;
+                                }
+                            }
+                        }
+
+                        if (typeCU != null) {
+                            String methodName = call.getNameAsString();
+                            var methods = typeCU.findAll(com.github.javaparser.ast.body.MethodDeclaration.class)
+                                    .stream()
+                                    .filter(m -> m.getNameAsString().equals(methodName))
+                                    .toList();
+
+                            if (!methods.isEmpty()) {
+                                // Return type
+                                return resolveType(methods.get(0).getType(), methods.get(0), sequence);
+                            }
+                        }
+                    }
+                }
+            } catch (Exception e) {
+                // Ignore parse errors
+            }
         }
 
         throw new TypeInferenceException("Unable to infer type for variable: " + varName);
     }
 
+    private String resolveType(com.github.javaparser.ast.type.Type type, com.github.javaparser.ast.Node contextNode,
+            StatementSequence sequence) {
+        // Attempt to resolve using AbstractCompiler
+        var classDecl = contextNode.findAncestor(com.github.javaparser.ast.body.ClassOrInterfaceDeclaration.class);
+        if (classDecl.isPresent()) {
+            String fqn = AbstractCompiler.resolveTypeFqn(type, classDecl.get(), null);
+            if (fqn != null && !fqn.equals("java.lang.Object") && !fqn.equals("Object")) {
+                return simplifyType(fqn);
+            }
+        }
+
+        // Fallback to AST string
+        String astType = type.asString();
+        if ("var".equals(astType)) {
+            // If implicit var, we might need initializer inference, but without solver it's
+            // hard.
+            // We can check initializer if available on the variable declarator
+            if (contextNode instanceof com.github.javaparser.ast.body.VariableDeclarator v) {
+                if (v.getInitializer().isPresent()) {
+                    var init = v.getInitializer().get();
+                    if (init.isMethodCallExpr()) {
+                        return inferTypeFromMethodCall(init.asMethodCallExpr(), sequence);
+                    }
+                    return inferTypeFromExpression(init);
+                }
+            }
+            return "Object"; // Worst case
+        }
+        return astType;
+    }
+
+    private String simplifyType(String fqn) {
+        if (fqn == null)
+            return null;
+        // Don't simplify primitives
+        if (fqn.equals("int") || fqn.equals(BOOLEAN) || fqn.equals(DOUBLE) || fqn.equals("void"))
+            return fqn;
+
+        int lastDot = fqn.lastIndexOf('.');
+        if (lastDot > 0) {
+            return fqn.substring(lastDot + 1);
+        }
+        return fqn;
+    }
+
     // [Rest of the class remains unchanged - keeping existing methods]
-    private RefactoringStrategy determineStrategy(
-            DuplicateCluster cluster,
-            TypeCompatibility typeCompat) {
+    private RefactoringStrategy determineStrategy(DuplicateCluster cluster) {
 
         // DEFAULT: EXTRACT_HELPER_METHOD is the primary, safest strategy
         // It works for both source and test files
@@ -808,22 +702,6 @@ public class RefactoringRecommendationGenerator {
         // If ANY source files involved, always use EXTRACT_HELPER_METHOD
         if (hasSourceFiles) {
             return RefactoringStrategy.EXTRACT_HELPER_METHOD;
-        }
-
-        // ALL duplicates in test files - but still default to EXTRACT_HELPER_METHOD
-        // Only use specialized strategies for clear, specific cases
-
-        // Note: Parameterized tests and @BeforeEach are DISABLED by default
-        // They require very specific patterns and have higher risk of false positives
-
-        // Example: When to enable:
-        // if (hasExplicitTestSetupPattern(cluster)) {
-        // return RefactoringStrategy.EXTRACT_TO_BEFORE_EACH;
-        // }
-
-        // Cross-class refactoring (when implemented)
-        if (isCrossClass(cluster)) {
-            return RefactoringStrategy.EXTRACT_TO_UTILITY_CLASS;
         }
 
         // Default to the most robust, general-purpose strategy
@@ -865,27 +743,13 @@ public class RefactoringRecommendationGenerator {
         if (!typeCompat.isTypeSafe())
             score *= 0.5;
 
-        if (parameters.size() > 4)
+        if (parameters.size() > 5)
             score *= 0.7;
 
         if (cluster.getAverageSimilarity() < 0.85)
             score *= 0.8;
 
         return score;
-    }
-
-    private boolean isSetupCode(StatementSequence sequence) {
-        String code = sequence.statements().toString().toLowerCase();
-        return code.contains("new ") || code.contains("set");
-    }
-
-    private boolean canParameterize(DuplicateCluster cluster) {
-        return cluster.duplicates().size() >= 3;
-    }
-
-    private boolean isCrossClass(DuplicateCluster cluster) {
-        // Check if duplicates span multiple classes
-        return false; // Simplified for now
     }
 
     private List<ParameterSpec> filterInternalParameters(List<ParameterSpec> params, StatementSequence sequence) {
@@ -992,5 +856,15 @@ public class RefactoringRecommendationGenerator {
             }
         }
         return filtered;
+    }
+
+    public static class TypeInferenceException extends RuntimeException {
+        public TypeInferenceException(String message) {
+            super(message);
+        }
+    }
+
+    // Lightweight holder for field metadata
+    private record FieldInfo(String type, boolean isStatic) {
     }
 }
